--- a/mystyle/styles.css
+++ b/mystyle/styles.css
@@ -58,7 +58,7 @@ header
 	max-width: 100%;
 
 	margin-top: 0;
-	background-image: url("../images/IMAGE_1.jpg");
+	background-image: url("../images/image_1.jpg");
 	background-repeat:border-radius:12px;
 	background-position: center;
 	background-repeat: no-repeat;
