--- a/mystyle/men.css
+++ b/mystyle/men.css
@@ -9,7 +9,8 @@ body {
 
 .topnav {
   overflow: hidden;
-  background-color:#CCEEFF ;
+  overflow: hidden;
+  background-color:SteelBlue ;
   
   /* #333*     #f2f2f2 */
 }
