--- a/mystyle/men.css
+++ b/mystyle/men.css
@@ -9,16 +9,14 @@ body {
 
 .topnav {
   overflow: hidden;
-  overflow: hidden;
   background-color:SteelBlue ;
-  
-  /* #333*     #f2f2f2 */
+  /* #333*/
 }
 
 .topnav a {
   float: left;
   display: block;
-  color:SteelBlue  ;
+  color: #f2f2f2;
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
